# pybind11-naive-svg

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SKILL.md  discussion.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: enscripten.yaml  wheels.yml
cubao_cmake_example/: __init__.py
docs/: code.md
naive_svg/: __init__.py  geojson2svg.py
src/: cubao_inline.hpp  main.cpp  naive_svg.hpp  pybind11_naive_svg.cpp
src/naive_svg/: _core.pyi  geojson2svg.py
tests/: test_basic.py  test_geojson_showcase.py
tests/output/: showcase.geojson
